2006-09-06  fabian

    * Added a lock to PSMTabBarControl to avoid crashes.
    * Fixed a blinking timing bug found by Roine Gusatfsson.
    
2006-09-01  fabian

    * Fixed a memory leak.
    * Fixed a bug that ignores tab style setting.
    
2006-08-30  fabian

    * Updated PSMTabBarControl to the latest CVS version. That fixed a frequent crash.
    
2006-08-29  fabian

    * Fixed a bug related to close-tab button.
    * Added tabLocation property to PSMTabBarControl so that Unified looks correct both
      when the tab is at the top and the tab is at the bottom.
    * Fixed a display bug so that new settings of tab location will be shown in opened windows.
    
2006-08-25  fabian

    * Fixed the overflow menu bug where the 1st item isn't updated correctly.
    * Restored (partly) context menu functionality for the new tabview.
    
2006-08-24  fabian

    * Fixed a few bugs related to the upgrade to new PSMTabBarControl.
    * Removed now redundant PTYTabViemItem
    * Cleaned up related PTYSession code
    
2006-08-23  fabian

    * Cleaned up iTermController.m, moved profile related code to PseudoTerminal.m
    * Cleaned up PseudoTerminal.m, to make it more robust to session addition/removal.
    * Updated PSMTabBarControl to the latest version 1.3
    * Fixed PreferencePanel so now the tab location works (only top and bottom though).
    
2006-08-22  fabian

    * Tweaked PTYTextView to enhance text display, especially with small fonts.
    
2006-03-26	ujwal

	* Added preference to choose between Metal and Aqua style window and tabs.
	* Added support to show warning bell in tab.

2006-03-25	ujwal

	* Added back support to show/hide first tab.

2006-03-23	ujwal

	* Made window metallized to get full Safari tab effect.

2006-03-20	ujwal

	* Initial checkin of new tabs provided by PSMTabBarControl. Not complete
	  or stable yet.
	* Rolled back the PTYTextView:-refresh change. Too many problems.

2006-03-17	ujwal
	